--- a/solution/quote-generator/src/conf/config.json
+++ b/solution/quote-generator/src/conf/config.json
@@ -6,21 +6,24 @@
       "symbol": "MCH",
       "volume": 95000,
       "price": 600,
-      "variation": 100
+      "variation": 100,
+      "period": 1000
     },
     {
       "name": "Divinator",
       "symbol": "DVN",
       "volume": 98000,
       "price": 650,
-      "variation": 50
+      "variation": 50,
+      "period": 1000
     },
     {
       "name": "Black Coat",
       "symbol": "BCT",
       "volume": 90000,
       "price": 550,
-      "variation": 150
+      "variation": 150,
+      "period": 1000
     }
   ]
 }
